--- a/source/CalculadoraDeMedia-UNINTER/CalculadoraDeMedia-UNINTER.csproj
+++ b/source/CalculadoraDeMedia-UNINTER/CalculadoraDeMedia-UNINTER.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8206B24D-9260-4470-B565-292893E9AB8F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>CalculadoraDeMedia_UNINTER</RootNamespace>
-    <AssemblyName>CalculadoraDeMedia-UNINTER</AssemblyName>
+    <RootNamespace>CalculadoraDeMedias_UNINTER</RootNamespace>
+    <AssemblyName>CalculadoraDeMedias_UNINTER</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -47,24 +47,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\Calculator\SubjectUtils.cs" />
     <Compile Include="FrmInfo.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmInfo.Designer.cs">
       <DependentUpon>FrmInfo.cs</DependentUpon>
     </Compile>
-    <Compile Include="Helper\Structure.cs" />
+    <Compile Include="Base\Calculator\ResultUtils.cs" />
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Utils\MathEngine.cs" />
+    <Compile Include="Functional\Calculator\MathEngine.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Results.cs" />
-    <Compile Include="Utils\UIMethods.cs" />
+    <Compile Include="Functional\Calculator\Result.cs" />
+    <Compile Include="Base\Program\GlobalEvents.cs" />
     <EmbeddedResource Include="FrmInfo.resx">
       <DependentUpon>FrmInfo.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +80,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -95,6 +97,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo-uninter.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Functional\Program\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
