Primeira adição das outras áreas EAD
- Foram adicionadas as outras áreas EAD, mas os cálculos ainda não foram totalmente testados;
- A interface foi novamente alterada de várias formas para encaixar melhor os componentes e animá-los de acordo com a área, etc...

--- a/source/CalculadoraDeMedia-UNINTER/CalculadoraDeMedia-UNINTER.csproj
+++ b/source/CalculadoraDeMedia-UNINTER/CalculadoraDeMedia-UNINTER.csproj
@@ -96,6 +96,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CalculoDeNotas\EAD-Politecnica.txt" />
+    <Content Include="CalculoDeNotas\EAD-Saúde Biociência Meio Ambiente e Sociedade.txt" />
+    <Content Include="CalculoDeNotas\EAD-Gestão_Publica .txt" />
+    <Content Include="CalculoDeNotas\EAD-Gestão_Comunicação.txt" />
+    <Content Include="CalculoDeNotas\EAD-Edu.txt" />
     <Content Include="logo-uninter.ico" />
   </ItemGroup>
   <ItemGroup>
